feat: find group by id
