# internal/server/engine.go
@@ -31,6 +31,7 @@ func GetEngine(environment di.Environment) *gin.Engine {
 	router.POST("/signup", environment.UserHandler.Signup)
 	router.POST("/refresh", environment.UserHandler.RefreshToken)
 	router.GET("/findbyid/:id", environment.UserHandler.FindById)
+	router.GET("/groups/:id", environment.GroupHandler.FindById)
 
 	basicAuthenticationRouter := router.Group("")
 	basicAuthenticationRouter.Use(environment.AuthenticationMiddleware.BasicAuthentication)
@@ -42,7 +43,7 @@ func GetEngine(environment di.Environment) *gin.Engine {
 	tokenAuthenticationRouter.Use(environment.AuthenticationMiddleware.TokenAuthentication)
 	tokenAuthenticationRouter.GET("/me", environment.UserHandler.Me)
 	tokenAuthenticationRouter.GET("/signout", environment.UserHandler.SignOut)
-	tokenAuthenticationRouter.GET("/groups/:name/id", environment.GroupHandler.NameToId)
+	tokenAuthenticationRouter.GET("/groups-name-to-id/:name", environment.GroupHandler.NameToId)
 
 	administratorRestrictedRouter := tokenAuthenticationRouter.Group("")
 	administratorRestrictedRouter.Use(environment.AuthorizationMiddleware.RequireAdministrator)
